some spacing fixes

--- a/second version/styles.css
+++ b/second version/styles.css
@@ -29,6 +29,7 @@ body {
     position: relative;
     height: 50vw;
     overflow: auto;
+    margin-bottom: 20px;
 }  
 
 
@@ -42,7 +43,7 @@ body {
 
 .kortti {
     min-width: 30vw; /* Width adjusts to 30% of the viewport width */
-    max-width: 50vw;
+    max-width: 40vw;
     background-color: var(--card-col);
     box-shadow: var(--box);
     padding: 20px;
@@ -75,6 +76,13 @@ body {
         height: 300px;
     }
 }
+
+@media screen and (max-width: 800px) {
+    p {
+        font-size: 12px;
+    }
+}
+
 
 /* Media Query for mobile */
 @media (max-width: 480px) {
@@ -259,4 +267,118 @@ footer p {
   }
   
   
-  
+  .language:hover {
+    box-shadow: 0 0 8px 6px lightgray;
+  }
+
+
+
+
+
+
+
+  /* Projects */
+
+/* 
+  #first, #second, #third, #fourth, #fifth, #sixth {
+
+    display: flex;
+    align-items: center;
+    justify-content: center
+ 
+  } */
+
+
+  #kontti {
+    display: flex;
+    align-items: flex-start; /* Align items at the start (top) */
+    justify-content: space-between;
+    overflow: hidden;
+    color: var(--text-col);
+    z-index: -1;
+  }
+
+
+.text-container {
+    flex: 2;
+    color: var(--text-col);
+}
+
+.text-container p {
+    font-family: roboto, sans-serif;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+    font-size: 15px;
+    line-height: 1.5; /* More space between lines */
+    letter-spacing: 0.5px;
+    margin-top: 5px;
+    margin-left: 5px;
+    overflow: hidden;
+    float: right;
+}
+
+#h2 {
+    color: blue;
+    text-shadow: 0 0 8px rgba(66, 170, 255, 0.7), 0 0 15px rgba(127, 197, 255, 0.9);
+    background: linear-gradient(45deg, #a4cce9, #1a7ac8);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #2f2f2f;
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    margin-bottom: 20px;
+}
+
+.logo {
+    width: 250px;
+    height: auto;
+    border-radius: 10px;
+}
+
+.text-container {
+    max-width: 500px;
+    padding: 0 15px;
+}
+
+.text-container p {
+    margin: 0;
+}
+
+.link {
+    color: #6A7BA2;
+    text-decoration: underline;
+}
+
+.title {
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #6A7BA2;
+    text-shadow: 0 0 10px #6A7BA2, 0 0 20px #6A7BA2;
+}
+
+.npm-logo-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.npm-logo {
+    width: 60px;
+    transition: transform 0.3s ease;
+}
+
+.npm-logo:hover {
+    transform: scale(1.1);
+}
+
+
+
+
